--- a/index.html
+++ b/index.html
@@ -2,6 +2,9 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta name="keywords" content="shadowctrl"/> 
+    <meta name="description" content=". ShadowCtrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs."/>
+    <meta name="author" content="shadowctrl"/>
     <link rel="icon" type="image/svg" href="/src/assets/Union.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shadowctrl</title>
