--- a/index.html
+++ b/index.html
@@ -3,11 +3,16 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="keywords" content="shadowctrl"/> 
-    <meta name="description" content=". ShadowCtrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs."/>
+    <meta property="og:image" content="/images/shadowctrl.jpg" />
+    <meta property="twitter:image" content="/images/shadowctrl.jpg" />
+    <meta itemprop="image" content="/images/shadowctrl.jpg">
+    <meta itemprop="name" content="Shadowctrl">
+    <meta itemprop="description" content="Shadowctrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs.">
+    <meta name="description" content="Shadowctrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs."/>
     <meta name="author" content="shadowctrl"/>
     <link rel="icon" type="image/svg" href="/src/assets/Union.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Shadowctrl</title>
+    <title>Shadowctrl | Home | Unleashing the power of 127.0.0.1</title>
   </head>
   <body>
     <div id="root"></div>
