--- a/index.html
+++ b/index.html
@@ -2,14 +2,18 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="keywords" content="shadowctrl"/> 
+    <meta name="keywords" content="shadowctrl, cyber security, hacker, pentester"/> 
     <meta property="og:image" content="/images/shadowctrl.jpg" />
     <meta property="twitter:image" content="/images/shadowctrl.jpg" />
     <meta itemprop="image" content="/images/shadowctrl.jpg">
+    <meta property="og:url" content="https://shadowctrl.me/">
+    
+   
     <meta itemprop="name" content="Shadowctrl">
     <meta itemprop="description" content="Shadowctrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs.">
     <meta name="description" content="Shadowctrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs."/>
     <meta name="author" content="shadowctrl"/>
+    <meta name="robots" content="index, nofollow"/>
     <link rel="icon" type="image/svg" href="/src/assets/Union.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Shadowctrl | Home | Unleashing the power of 127.0.0.1</title>
