--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta name="description" content="Shadowctrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs."/>
     <link rel="canonical" href="https://www.shadowctrl.me">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <meta name="robots" content="index, nofollow"/>
+    <meta name="robots" content="index, follow"/>
     
     <!-- Open Graph Tags -->
     <meta property="og:title" content="Shadowctrl | Home | Unleashing the power of 127.0.0.1"/>
