--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <meta name="keywords" content="shadowctrl, cyber security, hacker, pentester"/> 
     <meta name="name" content="Shadowctrl Portfolio">
     <meta name="author" content="shadowctrl"/>
-    <link rel="icon" type="image/svg" href="/src/assets/Union.svg" />
+    <link rel="icon" type="image/x-icon" href="/images/favicon.ico" />
     
     <!--Verification Tags-->
     <meta name="facebook-domain-verification" content="scm9cit5b7g60gsanz4ldsg98yrz4e" />
