--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <title>Shadowctrl | Home | Unleashing the power of 127.0.0.1</title>
     <meta name="description" content="Shadowctrl, a security professional and full stack developer, offers freelancing services tailored to meet your needs."/>
-    <link rel="canonical" href="https://www.shadowctrl.me">
+    <!-- <link rel="canonical" href="https://www.shadowctrl.me"> -->
     <meta name="viewport" content="width=device-width,height=device-height, initial-scale=1.0" />
     <meta name="robots" content="index, follow"/>
     
